# RSSBot

./: .gitignore  README.md  bot.py  main.py  setup.cfg  setup.py
Cogs/: RSS.py  about.py
conf/: token-origin.yml
